modified:   docs/css/theme/shocker.css fixed list alignment

--- a/docs/css/theme/shocker.css
+++ b/docs/css/theme/shocker.css
@@ -91,7 +91,7 @@ body {
 .reveal ol,
 .reveal dl,
 .reveal ul {
-  display: inline-block;
+  display: block;
   text-align: left;
   margin: 0 0 0 1em; }
 
